# msgpackr-python

./: .pre-commit-config.yaml  LICENSE  README.md  README_TEMPLATE.md  poetry_scripts.py  pyproject.toml  shields.json
.github/workflows/: codeql-analysis.yml  python-package.yml
msgpackr/: __init__.py  constants.py  extension.py  unpack.py  unpack_debug.py
src/: extension.py  unpack.py
tests/: test_sanity.py
tests/resources/: README.md
